Raised the content table to avoid clipping

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -82,7 +82,7 @@
     box-sizing: border-box;
     /* border: 10px solid #55AAFF;
     background-color: #3388DD; */
-    margin-bottom: 120px;
+    margin-bottom: 220px;
     border-radius: 20px;
 }
 .contCell, .activeCell, .emptyCell {
